# magicblock-svm

./: .gitignore  .output.txt  Cargo.toml
.github/workflows/: cargo-test.yml  publish.yml
bpf-loader-program/: Cargo.toml
bpf-loader-program/src/: lib.rs
crates/program-runtime/: Cargo.toml
crates/program-runtime/src/: loaded_programs.rs
crates/solana-account/: Cargo.toml
crates/solana-account/src/: lib.rs  tests.rs
crates/transaction-context/src/: transaction_accounts.rs
program-runtime/: Cargo.toml
program-runtime/src/: cpi.rs  invoke_context.rs  lib.rs  loaded_programs.rs  serialization.rs  sysvar_cache.rs
scripts/publish/: publish.sh
solana-account/: Cargo.toml
solana-account/src/: cow.rs  lib.rs  tests.rs
src/: access_permissions.rs  account_loader.rs  escrow.rs  lib.rs  rollback_accounts.rs  transaction_processor.rs
svm/: Cargo.toml
svm/src/: access_permissions.rs  account_loader.rs  message_processor.rs  program_loader.rs  rent_calculator.rs  rollback_accounts.rs  transaction_account_state_info.rs  transaction_processor.rs
svm/tests/: concurrent_tests.rs  integration_test.rs  mock_bank.rs
syscalls/src/: lib.rs
tests/: conformance.rs  integration_test.rs
transaction-context/: Cargo.toml
transaction-context/src/: instruction.rs  instruction_accounts.rs  lib.rs  transaction.rs  transaction_accounts.rs
