[package]
name = "solana-account"
description = "Solana Account type"
documentation = "https://docs.rs/solana-account"
version = "3.4.0"
edition = "2021"

[dependencies]
bincode = { version = "1.3.3", optional = true }
qualifier_attr = { version = "0.2.2", default-features = false, optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_derive = { version = "1.0", optional = true }
serde_bytes = { version = "0.11", optional = true }
solana-account-info = "3"
solana-clock = "3"
solana-instruction = "3"
solana-pubkey = "3"
solana-sysvar = "3"
solana-sdk-ids = "3"
solana-frozen-abi = { version = "3", optional = true, default-features = false, features = [
  "frozen-abi",
] }
solana-frozen-abi-macro = { version = "3", optional = true, default-features = false, features = [
  "frozen-abi",
] }


[features]
default = ["bincode", "dev-context-only-utils", "serde"]
bincode = [
  "dep:bincode",
  "solana-instruction/serde",
  "solana-sysvar/bincode",
  "serde",
]
dev-context-only-utils = ["bincode", "dep:qualifier_attr"]
serde = [
  "dep:serde",
  "dep:serde_bytes",
  "dep:serde_derive",
  "solana-pubkey/serde",
]
# Enable ABI freeze support and forward to dependent crates
frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]
